--- a/Core.asmdef
+++ b/Core.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Core",
+    "name": "core",
     "rootNamespace": "Spounka",
     "references": [
         "GUID:343deaaf83e0cee4ca978e7df0b80d21"
