--- a/Core.asmdef
+++ b/Core.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "core",
     "rootNamespace": "Spounka",
-    "references": [
-        "GUID:343deaaf83e0cee4ca978e7df0b80d21"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
